# cpdb-libs

./: .gitignore  CHANGES.md  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  cpdb-backend.pc.in  cpdb-frontend.pc.in  cpdb-libs-backend.pc.in  cpdb-libs-common.pc.in  cpdb-libs-frontend.pc.in  cpdb.pc.in
cpdb/: Makefile.am  backend.h  cpdb-frontend.c  cpdb-frontend.h  cpdb.c  cpdb.h  frontend.h
cpdb/interface/: org.openprinting.Backend.xml  org.openprinting.Frontend.xml
demo/: Makefile  pickle_test.c  print_frontend.c  run-tests.sh
lib/: Makefile.am  common_helper.c  common_helper.h  cpdb-libs-backend.h  cpdb-libs-frontend.h  frontend_helper.c  frontend_helper.h
lib/interface/: org.openprinting.Backend.xml  org.openprinting.Frontend.xml
m4/: cpdb-common.m4  cpdb-directories.m4
po/: Makevars  POTFILES.in
tools/: Makefile.am  cpdb-pickle-print.c  cpdb-text-frontend.c  print_frontend.c  run-tests.sh
